# chessbeast

./: .claudeignore  .eslintrc.cjs  .gitignore  .mcp.json.example  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TASKS.md  annotated.pgn  critique_and_advice.md  game.pgn  good_annotated.pgn  output.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json  ultra_fast_chess_coach_architecture.md  vitest.workspace.ts
.claude/skills/analysis-review/: SKILL.md
.claude/skills/annotation-review/: SKILL.md
.claude/skills/perf-review/: SKILL.md
.github/workflows/: ci.yml
data/: .gitkeep
docker/: .env.example  Dockerfile.maia  Dockerfile.stockfish  Dockerfile.stockfish-builder  Dockerfile.stockfish16  Dockerfile.stockfish16-builder  docker-compose.yml
docker/scripts/: build-stockfish.sh  build-stockfish16.sh
docs/: PRD.md  TASKS.md  TDD.md  agentic-annotation.md  analysis-conventions.md  annotation-conventions.md  api.md  architecture.md  concepts.md  configuration.md  docker.md  performance-conventions.md
docs/archive/: PRD.md  TASKS.md  TDD.md
scripts/: build-protos.sh  build-stockfish-native.sh  download-eco.sh  download-lichess-elite.sh  download-stockfish.sh  install-hooks.sh
scripts/hooks/: commit-msg
services/: conftest.py
services/common/: pyproject.toml
services/common/src/common/: __init__.py  exceptions.py  grpc_errors.py  server.py
services/common/tests/: test_exceptions.py  test_grpc_errors.py  test_server.py
services/maia/: pyproject.toml
services/maia/src/maia_service/: __init__.py  config.py  model.py  server.py
services/maia/tests/: conftest.py  test_maia_server.py  test_model.py
services/protos/: common.proto  maia.proto  stockfish.proto  stockfish16.proto
services/stockfish/: pyproject.toml
services/stockfish/src/stockfish_service/: __init__.py  config.py  engine.py  pool.py  server.py
services/stockfish/tests/: conftest.py  test_engine.py  test_integration.py  test_pool.py  test_pool_concurrency.py  test_stockfish_server.py
services/stockfish16/: pyproject.toml
services/stockfish16/src/stockfish16_service/: __init__.py  config.py  engine.py  eval_parser.py  pool.py  server.py
services/stockfish16/tests/: conftest.py  test_engine.py  test_eval_parser.py  test_manager.py
tests/: vitest.config.ts
tests/benchmarks/: profile-comparison.test.ts
tests/quality/: annotation-coherence.test.ts  blunder-detection.test.ts  opening-identification.test.ts
