[project]
name = "chessbeast-maia"
version = "0.1.0"
description = "Maia gRPC service for ChessBeast"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "chess>=1.10",
    "maia2>=0.1.0",
    "chessbeast-common",
    # maia2 has undeclared dependencies, adding them explicitly:
    "numpy>=1.26",
    "torch>=2.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyzstd>=0.15",
    "pyyaml>=6.0",
    "gdown>=5.0",
    "pandas>=2.0",
    "einops>=0.7",
]

[tool.uv.sources]
chessbeast-common = { path = "../common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maia_service"]
