[project]
name = "chessbeast-stockfish16"
version = "0.1.0"
description = "Stockfish 16 classical eval gRPC service for ChessBeast"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "chess>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockfish16_service"]
